Configure suggestion screen to display data dynamically on any object

--- a/force-app/main/default/classes/CoCDataRequest.cls
+++ b/force-app/main/default/classes/CoCDataRequest.cls
@@ -3,4 +3,6 @@ public class CoCDataRequest {
     @AuraEnabled public String identifier{get;set;}
     @AuraEnabled public Boolean isBranch{get;set;}
     @AuraEnabled public Boolean isMainBranch{get;set;}
+    @AuraEnabled public List<MappingDetail__mdt> mappingDetail{get;set;}
+    @AuraEnabled public String sObjectType{get;set;}
 }
