US1529 - dynamic update feature

--- a/force-app/main/default/classes/CoCDataRequest.cls
+++ b/force-app/main/default/classes/CoCDataRequest.cls
@@ -1,5 +1,5 @@
 public class CoCDataRequest {
-    @AuraEnabled public String accountId{get;set;}
+    @AuraEnabled public String recordId{get;set;}
     @AuraEnabled public String identifier{get;set;}
     @AuraEnabled public Boolean isBranch{get;set;}
     @AuraEnabled public Boolean isMainBranch{get;set;}
