Replace placeholder and add SortOrderBy field to MappingDetail_mdt

--- a/force-app/main/default/translations/nl_NL.translation-meta.xml
+++ b/force-app/main/default/translations/nl_NL.translation-meta.xml
@@ -57,7 +57,7 @@
         <name>CoC_LWC_Col_Street</name>
     </customLabels>
     <customLabels>
-        <label><!-- CoC_LWC_Placeholder --></label>
+        <label>Vul hier een bedrijfsnaam in.</label>
         <name>CoC_LWC_Placeholder</name>
     </customLabels>
     <customLabels>
